--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1> test </h1>
+<!DOCTYPE html>
+<html lang="{{ site.lang | default: "en-US" }}">
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,maximum-scale=2">
+  </head>
+
+  <body>
+    <h1> Test </h1>
+  </body>
+</html>
